--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+/* Add this to your App.css or global stylesheet */
+@keyframes ringAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-ring {
+  background-size: 300% 300%;
+  animation: ringAnimation 4s linear infinite;
+}
